feat: add authentication
